syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTG";

package main;

// Interface exported by the server.
service CycleStream {
  // A Bidirectional streaming RPC.
  //
  // Accepts a stream of cycleTLSRequest 
  //Returns a Stream of Response
  rpc Stream(stream CycleTLSRequest) returns (stream Response) {}
}



message CycleTLSRequest {
  string RequestID = 1;
  string URL = 2;
  string Method = 3;
  map<string, string> Headers = 4;
  string Body = 5;
  string Ja3 = 6;
  string UserAgent = 7;
  string Proxy = 8;
  map<string, string> Cookies = 9;
  float Timeout = 10;
  bool DisableRedirect = 11;
}

message Response {
  string RequestID  = 1;
  int32 Status = 2;
  string Body = 3;
  map<string, string> Headers = 4;
}